--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "peertube-plugin-auth-oauth2",
+  "name": "peertube-plugin-auth-oauth2-improved",
   "description": "A PeerTube server plugin that adds support for external authentication via an OAuth 2.0 provider. The callback URL path is /plugins/auth-oauth2/router/callback",
   "version": "1.0.5",
   "author": "Codify Global LLC",
@@ -29,7 +29,8 @@
   "library": "./main.js",
   "dependencies": {
     "client-oauth2": "^4.3.3",
-    "openid-client": "^3.15.10"
+    "openid-client": "^3.15.10",
+    "unique-username-generator": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "^7.8.1",
